<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">FlixNet</string>

    <string name="hint_email" translatable="false">email@email.com</string>
    <string name="hint_name">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmpassword">Repeat your Password</string>
    <string name="hint_nacionality">Nacionality</string>

    <string name="label_login">Login</string>
    <string name="label_register">Register</string>

    <string-array name="arr_nacionalities">
        <item>España</item>
        <item>Francia</item>
        <item>Reino Unido</item>
        <item>Italia</item>
        <item>Alemania</item>
        <item>Estados Unidos</item>
    </string-array>
    <string name="label_ok" translatable="false">OK</string>
</resources>